--- a/appspec.yml
+++ b/appspec.yml
@@ -2,17 +2,17 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/express-app
+    destination: /home/ubuntu/node-hello
 hooks:
-  ApplicationStop:
+    ApplicationStop:
     - location: scripts/application_stop.sh
       timeout: 300
-      runas: ec2-user
-  BeforeInstall:
+      runas: ubuntu
+    BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: ec2-user
-  ApplicationStart:
+      runas: ubuntu
+    ApplicationStart:
     - location: scripts/application_start.sh
       timeout: 300
-      runas: ec2-user
+      runas: ubuntu
